// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pass4 web: discussions split > renders an empty discussions tab inside a router 1`] = `
<div
  class="space-y-4"
>
  <div
    class="rounded-xl border border-[var(--color-border)] bg-[var(--color-surface-1)] p-5"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <h2
        class="text-lg font-semibold text-[var(--color-text-primary)]"
      >
        Discussions
      </h2>
      <button
        class="inline-flex items-center justify-center gap-2 rounded-lg font-medium transition-colors duration-150 disabled:opacity-50 disabled:pointer-events-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-accent)] bg-[var(--color-surface-3)] text-[var(--color-text-primary)] hover:bg-[var(--color-surface-4)] px-3 py-1.5 text-xs"
      >
        <svg
          class="h-3.5 w-3.5"
          data-testid="icon"
        />
        Refresh
      </button>
    </div>
    <div
      class="text-center text-[var(--color-text-muted)] py-10 text-sm"
    >
      <svg
        class="h-6 w-6 mx-auto mb-3"
        data-testid="icon"
      />
      No Discussions Yet.
    </div>
  </div>
</div>
`;

exports[`pass4 web: projects split > renders an empty projects tab 1`] = `
<div
  class="space-y-4"
>
  <div
    class="rounded-xl border border-[var(--color-border)] bg-[var(--color-surface-1)] p-5"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <h2
        class="text-lg font-semibold text-[var(--color-text-primary)]"
      >
        Projects
      </h2>
      <button
        class="inline-flex items-center justify-center gap-2 rounded-lg font-medium transition-colors duration-150 disabled:opacity-50 disabled:pointer-events-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-accent)] bg-[var(--color-surface-3)] text-[var(--color-text-primary)] hover:bg-[var(--color-surface-4)] px-3 py-1.5 text-xs"
      >
        <svg
          class="h-3.5 w-3.5"
          data-testid="icon"
        />
        Refresh
      </button>
    </div>
    <div
      class="text-center text-[var(--color-text-muted)] py-10 text-sm"
    >
      <svg
        class="h-6 w-6 mx-auto mb-3"
        data-testid="icon"
      />
      No Projects Yet.
    </div>
  </div>
</div>
`;

exports[`pass4 web: releases split > renders an empty releases tab 1`] = `
<div
  class="space-y-4"
>
  <div
    class="rounded-xl border border-[var(--color-border)] bg-[var(--color-surface-1)] p-5"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <h2
        class="text-lg font-semibold text-[var(--color-text-primary)]"
      >
        Releases
      </h2>
      <button
        class="inline-flex items-center justify-center gap-2 rounded-lg font-medium transition-colors duration-150 disabled:opacity-50 disabled:pointer-events-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-accent)] bg-[var(--color-surface-3)] text-[var(--color-text-primary)] hover:bg-[var(--color-surface-4)] px-3 py-1.5 text-xs"
      >
        <svg
          class="h-3.5 w-3.5"
          data-testid="icon"
        />
        Refresh
      </button>
    </div>
    <div
      class="text-center text-[var(--color-text-muted)] py-10 text-sm"
    >
      <svg
        class="h-6 w-6 mx-auto mb-3"
        data-testid="icon"
      />
      No Releases Yet.
    </div>
  </div>
</div>
`;

exports[`pass4 web: teams split > renders an empty teams manager 1`] = `
<div
  class="rounded-xl border border-[var(--color-border)] bg-[var(--color-surface-1)] p-5"
>
  <div
    class="flex items-center justify-between mb-4"
  >
    <h2
      class="text-lg font-semibold text-[var(--color-text-primary)]"
    >
      Teams
    </h2>
    <button
      class="inline-flex items-center justify-center gap-2 rounded-lg font-medium transition-colors duration-150 disabled:opacity-50 disabled:pointer-events-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-accent)] bg-[var(--color-surface-3)] text-[var(--color-text-primary)] hover:bg-[var(--color-surface-4)] px-3 py-1.5 text-xs"
    >
      <svg
        class="h-3.5 w-3.5"
        data-testid="icon"
      />
      Refresh
    </button>
  </div>
  <form
    class="flex gap-3 flex-wrap mb-4"
  >
    <div
      class="flex-1 min-w-48"
    >
      <input
        class="w-full px-3 py-2 rounded-lg bg-[var(--color-surface-base)] border border-[var(--color-border)] text-[var(--color-text-primary)] placeholder:text-[var(--color-text-muted)] transition-colors duration-150 focus:outline-none focus:border-[var(--color-accent)] disabled:opacity-60"
        maxlength="39"
        placeholder="team-slug"
        required=""
        value=""
      />
    </div>
    <button
      class="inline-flex items-center justify-center gap-2 rounded-lg font-medium transition-colors duration-150 disabled:opacity-50 disabled:pointer-events-none focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--color-accent)] bg-[var(--color-accent)] text-[#0d1008] hover:bg-[var(--color-accent-dim)] px-3 py-1.5 text-xs"
      type="submit"
    >
      Create Team
    </button>
  </form>
  <p
    class="text-sm text-[var(--color-text-muted)] mt-4"
  >
    No Teams Yet.
  </p>
</div>
`;
